// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly render Mistake with one one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Correctly render Mistake with one zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
